// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TreeSelect > TreeSelect baseVue demo works fine 1`] = `
<div
  class="t-tree-select"
  style="height: 336px;"
>
  
  <div
    class="t-tree-select__column t-tree-select__column--left"
  >
    <div
      class="t-side-bar t-tree-select-colum"
    >
      
      
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项一
        </div>
      </div>
      <div
        class="t-side-bar-item t-side-bar-item--active"
      >
        <div>
          <div
            class="t-side-bar-item__line"
          />
          <div
            class="t-side-bar-item__prefix"
          />
          <div
            class="t-side-bar-item__suffix"
          />
        </div>
        <!---->
        <div>
          选项二
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项三
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项四
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项五
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项六
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项七
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项八
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项九
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项十
        </div>
      </div>
      
      
      <div
        class="t-side-bar__padding"
      />
    </div>
  </div>
  <div
    class="t-tree-select__column t-tree-select__column--right"
  >
    <div
      class="t-radio-group t-tree-select__radio"
      role="radiogroup"
    >
      <!---->
      
      
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-0"
        />
        <div
          class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项一
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-1"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项二
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-2"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项三
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-3"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项四
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-4"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项五
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-5"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项六
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-6"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项七
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-7"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项八
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-8"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项九
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1-9"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            选项十
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  
</div>
`;

exports[`TreeSelect > TreeSelect mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    TreeSelect 树形选择器
  </h1>
  <p
    class="summary"
  >
    用于多层级数据的逐级选择。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础树形选择
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tree-select"
        style="height: 336px;"
      >
        
        <div
          class="t-tree-select__column t-tree-select__column--left"
        >
          <div
            class="t-side-bar t-tree-select-colum"
          >
            
            
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项一
              </div>
            </div>
            <div
              class="t-side-bar-item t-side-bar-item--active"
            >
              <div>
                <div
                  class="t-side-bar-item__line"
                />
                <div
                  class="t-side-bar-item__prefix"
                />
                <div
                  class="t-side-bar-item__suffix"
                />
              </div>
              <!---->
              <div>
                选项二
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项三
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项四
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项五
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项六
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项七
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项八
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项九
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项十
              </div>
            </div>
            
            
            <div
              class="t-side-bar__padding"
            />
          </div>
        </div>
        <div
          class="t-tree-select__column t-tree-select__column--right"
        >
          <div
            class="t-radio-group t-tree-select__radio"
            role="radiogroup"
          >
            <!---->
            
            
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-0"
              />
              <div
                class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
              >
                <svg
                  class="t-icon t-icon-check t-radio__icon-wrap"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
                    fill="currentColor"
                  />
                </svg>
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项一
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-1"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项二
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-2"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项三
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-3"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项四
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-4"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项五
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-5"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项六
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-6"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项七
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-7"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项八
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-8"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项九
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="1-9"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  选项十
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        多选树形选择
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tree-select"
        style="height: 336px;"
      >
        
        <div
          class="t-tree-select__column t-tree-select__column--left"
        >
          <div
            class="t-side-bar t-tree-select-colum"
          >
            
            
            <div
              class="t-side-bar-item t-side-bar-item--active"
            >
              <div>
                <div
                  class="t-side-bar-item__line"
                />
                <div
                  class="t-side-bar-item__prefix"
                />
                <div
                  class="t-side-bar-item__suffix"
                />
              </div>
              <!---->
              <div>
                选项一
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项二
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项三
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项四
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项五
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项六
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项七
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项八
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项九
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                选项十
              </div>
            </div>
            
            
            <div
              class="t-side-bar__padding"
            />
          </div>
        </div>
        <div
          class="t-tree-select__column t-tree-select__column--right"
        >
          <div
            class="t-checkbox-group t-tree-select__checkbox"
          >
            
            
            <div
              class="t-checkbox t-checkbox--right t-checkbox--checked t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right t-checkbox__icon--checked"
              >
                <svg
                  class="t-icon t-icon-check t-checkbox__icon-wrapper"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  
                  选项一
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--checked t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right t-checkbox__icon--checked"
              >
                <svg
                  class="t-icon t-icon-check t-checkbox__icon-wrapper"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title t-checkbox__title--checked"
                >
                  
                  选项二
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项三
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项四
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项五
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项六
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项七
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项八
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项九
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <div
              class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
            >
              <div
                class="t-checkbox__icon t-checkbox__icon--right"
              >
                
                <!---->
                <div
                  class="placeholder"
                />
                
              </div>
              <div
                class="t-checkbox__content"
              >
                <div
                  class="t-checkbox__title"
                >
                  
                  选项十
                  
                </div>
                <div
                  class="t-checkbox__description"
                >
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        三级树形选择
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tree-select"
        style="height: 336px;"
      >
        
        <div
          class="t-tree-select__column t-tree-select__column--left"
        >
          <div
            class="t-side-bar t-tree-select-colum"
          >
            
            
            <div
              class="t-side-bar-item t-side-bar-item--active"
            >
              <div>
                <div
                  class="t-side-bar-item__line"
                />
                <div
                  class="t-side-bar-item__prefix"
                />
                <div
                  class="t-side-bar-item__suffix"
                />
              </div>
              <!---->
              <div>
                北京市
              </div>
            </div>
            <div
              class="t-side-bar-item"
            >
              <!---->
              <!---->
              <div>
                广东省
              </div>
            </div>
            
            
            <div
              class="t-side-bar__padding"
            />
          </div>
        </div>
        <div
          class="t-tree-select__column t-tree-select__column--middle"
        >
          
          <div
            class="t-tree-select__item t-tree-select__item--active t-tree-select__item--disabled"
          >
            北京市
          </div>
          
        </div>
        <div
          class="t-tree-select__column t-tree-select__column--right"
        >
          <div
            class="t-radio-group t-tree-select__radio"
            role="radiogroup"
          >
            <!---->
            
            
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110101"
              />
              <div
                class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
              >
                <svg
                  class="t-icon t-icon-check t-radio__icon-wrap"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
                    fill="currentColor"
                  />
                </svg>
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  东城区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                disabled=""
                name=""
                type="radio"
                value="110102"
              />
              <div
                class="t-radio__icon t-radio__icon--right t-radio__icon--disabled"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title t-radio__title--disabled"
                  style=""
                >
                  
                  西城区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110105"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  朝阳区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110106"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  丰台区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110107"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  石景山区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110108"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  海淀区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110109"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  门头沟区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110111"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  房山区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110112"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  通州区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110113"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  顺义区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110114"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  昌平区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110115"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  大兴区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110116"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  怀柔区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110117"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  平谷区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110118"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  密云区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
            >
              <input
                class="t-radio__original"
                name=""
                type="radio"
                value="110119"
              />
              <div
                class="t-radio__icon t-radio__icon--right"
              >
                <div
                  class="placeholder"
                />
                <!---->
              </div>
              <div
                class="t-radio__content"
              >
                <span
                  class="t-radio__title"
                  style=""
                >
                  
                  延庆区
                  
                </span>
                <!---->
              </div>
              <!---->
            </div>
            
            
          </div>
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`TreeSelect > TreeSelect multipleVue demo works fine 1`] = `
<div
  class="t-tree-select"
  style="height: 336px;"
>
  
  <div
    class="t-tree-select__column t-tree-select__column--left"
  >
    <div
      class="t-side-bar t-tree-select-colum"
    >
      
      
      <div
        class="t-side-bar-item t-side-bar-item--active"
      >
        <div>
          <div
            class="t-side-bar-item__line"
          />
          <div
            class="t-side-bar-item__prefix"
          />
          <div
            class="t-side-bar-item__suffix"
          />
        </div>
        <!---->
        <div>
          选项一
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项二
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项三
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项四
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项五
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项六
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项七
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项八
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项九
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          选项十
        </div>
      </div>
      
      
      <div
        class="t-side-bar__padding"
      />
    </div>
  </div>
  <div
    class="t-tree-select__column t-tree-select__column--right"
  >
    <div
      class="t-checkbox-group t-tree-select__checkbox"
    >
      
      
      <div
        class="t-checkbox t-checkbox--right t-checkbox--checked t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right t-checkbox__icon--checked"
        >
          <svg
            class="t-icon t-icon-check t-checkbox__icon-wrapper"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            
            选项一
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--checked t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right t-checkbox__icon--checked"
        >
          <svg
            class="t-icon t-icon-check t-checkbox__icon-wrapper"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title t-checkbox__title--checked"
          >
            
            选项二
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项三
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项四
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项五
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项六
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项七
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项八
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项九
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-checkbox t-checkbox--right t-checkbox--block t-tree-select__checkbox-item"
      >
        <div
          class="t-checkbox__icon t-checkbox__icon--right"
        >
          
          <!---->
          <div
            class="placeholder"
          />
          
        </div>
        <div
          class="t-checkbox__content"
        >
          <div
            class="t-checkbox__title"
          >
            
            选项十
            
          </div>
          <div
            class="t-checkbox__description"
          >
            <!---->
          </div>
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  
</div>
`;

exports[`TreeSelect > TreeSelect normalVue demo works fine 1`] = `
<div
  class="t-tree-select"
  style="height: 336px;"
>
  
  <div
    class="t-tree-select__column t-tree-select__column--left"
  >
    <div
      class="t-side-bar t-tree-select-colum"
    >
      
      
      <div
        class="t-side-bar-item t-side-bar-item--active"
      >
        <div>
          <div
            class="t-side-bar-item__line"
          />
          <div
            class="t-side-bar-item__prefix"
          />
          <div
            class="t-side-bar-item__suffix"
          />
        </div>
        <!---->
        <div>
          北京市
        </div>
      </div>
      <div
        class="t-side-bar-item"
      >
        <!---->
        <!---->
        <div>
          广东省
        </div>
      </div>
      
      
      <div
        class="t-side-bar__padding"
      />
    </div>
  </div>
  <div
    class="t-tree-select__column t-tree-select__column--middle"
  >
    
    <div
      class="t-tree-select__item t-tree-select__item--active t-tree-select__item--disabled"
    >
      北京市
    </div>
    
  </div>
  <div
    class="t-tree-select__column t-tree-select__column--right"
  >
    <div
      class="t-radio-group t-tree-select__radio"
      role="radiogroup"
    >
      <!---->
      
      
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110101"
        />
        <div
          class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            东城区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          disabled=""
          name=""
          type="radio"
          value="110102"
        />
        <div
          class="t-radio__icon t-radio__icon--right t-radio__icon--disabled"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title t-radio__title--disabled"
            style=""
          >
            
            西城区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110105"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            朝阳区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110106"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            丰台区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110107"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            石景山区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110108"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            海淀区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110109"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            门头沟区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110111"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            房山区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110112"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            通州区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110113"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            顺义区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110114"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            昌平区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110115"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            大兴区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110116"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            怀柔区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110117"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            平谷区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110118"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            密云区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-radio t-radio--right t-radio--block t-tree-select__radio-item"
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="110119"
        />
        <div
          class="t-radio__icon t-radio__icon--right"
        >
          <div
            class="placeholder"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            
            延庆区
            
          </span>
          <!---->
        </div>
        <!---->
      </div>
      
      
    </div>
  </div>
  
</div>
`;
